assets/scss/pages/_standard-page.scss
.standard-page {
    padding-bottom: 89px;
    margin: $nav-desktop-height auto 0;

    @include breakpoint(medium down) {
        overflow: hidden;
        padding: 26px 0 67px;
        margin-top: $nav-mobile-height;
    }

    .side-nav-content {
        margin-top: 42px;

        .side-navigation {
            display: flex;
            align-items: flex-end;
        }

        .side-content {
            .content-wrapper {
                @include breakpoint(large up) {
                    padding-right: 14%;
                }

                .h2 {
                    margin-bottom: 28px;
                    text-transform: capitalize;
                }

                .big-copy {
                    margin-top: 20px;
                }

                a {
                    @extend .animated-underline;
                }
            }
        }
    }

    .standard-page-slider {
        margin-top: 50px;

        .standard-page-slide {
            padding: 60px 0;

            @include breakpoint(small only) {
                padding: 28px 5px;
            }

            img {
                width: 62%;

                @include breakpoint(small only) {
                    width: 90%;
                }
            }

            .slide-content {
                width: 38%;
                padding-left: 49px;

                @include breakpoint(small only) {
                    opacity: 0;
                    width: 100%;
                    padding-left: 0;
                    margin-top: 29px;
                    transition: opacity 100ms ease-in-out;
                }
            }

            .big-copy {
                line-height: 2.6rem;

                @include breakpoint(large down) {
                    line-height: 1.3;
                }

                @include breakpoint(small only) {
                    font-size: 1.4rem;
                    line-height: 2rem;
                }
            }

            .heading {
                line-height: 4rem;

                @include breakpoint(small only) {
                    font-size: 3rem;
                    line-height: 3.5rem;
                    font-weight: $semi-bold;
                }
            }
        }

        .glide__slide--active {
            .slide-content {
                @include breakpoint(small only) {
                    opacity: 1;
                }
            }
        }

        .glide__bullets {
            @include breakpoint(small only) {
                margin-left: -15px;
                width: calc(100% + 30px);
            }
        }

        .glide__track {
            margin-right: -19.5%;

            @include breakpoint(1955px up) {
                margin-right: 0;
            }
        }
    }
}

